# docker-kubernetes

./: .gitignore  README.md
app/: README.md
app/1-hello-world/: hello.py
app1-simple/: pyproject.toml
app1_simple/: Makefile  README.md  pyproject.toml
app1_simple/src/: hello.py
app2-test/: routes.py  test_logic.py
app2_test/: Makefile  README.md  functions.py  pyproject.toml
app2_test/src/: logic.py  routes.py
app2_test/src/templates/: my-form.html
app2_test/tests/: test_logic.py
app3_docker/: Dockerfile  Makefile  README.md  pyproject.toml
app3_docker/src/flaskapp/: __init__.py  routes.py
app3_docker/src/tests/: test_logic.py
app4_multi/: Dockerfile
apps/: README.md
apps/2-app-with-test/: pyproject.toml
docker/: README.md
docker/1-docker-app/: Dockerfile  Makefile
docker/2-docker-multi-app/: Docker-compose.yaml  Makefile
docker2-multi/: Makefile  pyproject.toml
docker2-multi/src/flaskapp/templates/: my_result.html
flask_tutorial/: pyproject.toml
k8s/: README.md
k8s/1-kubectl/: 3-create-deployment.md  4-current-status.md  6-start-terminal.md  7-delete-pod.md
k8s/1-use-cases/: 1-create-pod.md  2-create-deployment.md  3-inspect-logs.md  4-current-status.md  5-start-terminal.md  6-delete-pod.md
k8s/3-deploy-to-k8s/: 1-container-registry.md  2-config-template.json  2-deploy-secrets.md  2-k8s-secret.yaml  3-deploy-image.md  3-deployment.yaml  3-job.yaml
k8s/kubectl/: 1-enable-local-k8s.md  2-create-pod.md  5-inspect-logs.md  8-configuration-file.md
k8s/kubens-kubectx/: 1-namespaces.md  2-change-namespace.md
(+4 files in other folders)
