[tool.poetry]
name = "flask_tutorial"
version = "0.1.0"
description = ""
authors = ["Hench89 <hchristoffersen100@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
